feat: add transition and info button

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="drum.png" />
     <title>JS Drum Kit</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
   </head>
   <body>
+    <button id="info">?</button>
+    <div class="modal">
+      <div class="modal-content">
+        <span id="close">&times;</span>
+        <h2>Author: <a href="https://github.com/yuyuu-8">yuyu</a></h2>
+      </div>
+    </div>
+
     <div class="keys">
       <div data-key="65" class="key">
         <kbd>A</kbd>
@@ -57,5 +65,7 @@
     <audio data-key="74" src="sounds/snare.wav"></audio>
     <audio data-key="75" src="sounds/tom.wav"></audio>
     <audio data-key="76" src="sounds/tink.wav"></audio>
+
+    <script src="script.js"></script>
   </body>
 </html>
