--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="drum.png" />
+    <link rel="icon" href="./img/drum.png" />
     <title>JS Drum Kit</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
